--- a/src/gtworld.html
+++ b/src/gtworld.html
@@ -125,7 +125,7 @@
                         <desc>Created with Fabric.js 1.7.22</desc>
                         <defs>
                         </defs>
-                        <g transform="translate(128 128) scale(0.72 0.72)" style="">
+                        <g transform="translate(128 128) scale(0.72 0.72)">
                             <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;"
                                 transform="translate(-175.05 -175.05000000000004) scale(3.89 3.89)">
                                 <path
@@ -206,7 +206,7 @@
                         <desc>Created with Fabric.js 1.7.22</desc>
                         <defs>
                         </defs>
-                        <g transform="translate(128 128) scale(0.72 0.72)" style="">
+                        <g transform="translate(128 128) scale(0.72 0.72)">
                             <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;"
                                 transform="translate(-175.05 -175.05000000000004) scale(3.89 3.89)">
                                 <path
@@ -654,7 +654,8 @@
                     Conclusion
                 </h3>
 
-                <p class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:my-8">
+                <p
+                    class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:my-8">
                     The focus of this redesign was centered around delivering an all-new experience on the GTBank
                     application. Based on the
                     research and feedback I had gathered, it was certain that the UI of the app was one of the major
