--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,8 @@
 <body class="body bg-white dark:bg-dark overflow-x-hidden">
   <div class="container relative mx-auto px-8 sm:px-14 md:px-16 lg:px-24 xl:px-28 2xl:px-32">
     <nav>
-      <div class="nav-container font-sf dark:text-white py-4 sm:py-6 lg:py-7 xl:py-9 2xl:py-12 flex justify-between items-center tracking-widest">
+      <div
+        class="nav-container font-sf dark:text-white py-4 sm:py-6 lg:py-7 xl:py-9 2xl:py-12 flex justify-between items-center tracking-widest">
         <div class="logo opacity-0">
           <a class="flex" href="index.html">
             <p class="letter o text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
@@ -561,7 +562,7 @@
                 <desc>Created with Fabric.js 1.7.22</desc>
                 <defs>
                 </defs>
-                <g transform="translate(128 128) scale(0.72 0.72)" style="">
+                <g transform="translate(128 128) scale(0.72 0.72)">
                   <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;"
                     transform="translate(-175.05 -175.05000000000004) scale(3.89 3.89)">
                     <path
@@ -642,7 +643,7 @@
                 <desc>Created with Fabric.js 1.7.22</desc>
                 <defs>
                 </defs>
-                <g transform="translate(128 128) scale(0.72 0.72)" style="">
+                <g transform="translate(128 128) scale(0.72 0.72)">
                   <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;"
                     transform="translate(-175.05 -175.05000000000004) scale(3.89 3.89)">
                     <path
@@ -850,8 +851,10 @@
     </div>
 
     <div class="grid-div overflow-x-scroll w-full">
-      <div class="grid-div-container flex-nowrap mt-10 lg:mt-16 flex justify-between space-x-10 lg:space-x-24 pr-7 sm:pr-14 md:pr-0 min-w-full">
-        <div class="presently-container min-w-8 sm:min-w-1/2 md:min-w-4 lg:min-w-1/3 ml-10 sm:ml-14 md:ml-24 lg:ml-38 xl:ml-48 p-7 lg:p-7 xl:p-14 2xl:p-16 border 2xl:py-16 2xl:pl-16">
+      <div
+        class="grid-div-container flex-nowrap mt-10 lg:mt-16 flex justify-between space-x-10 lg:space-x-24 pr-7 sm:pr-14 md:pr-0 min-w-full">
+        <div
+          class="presently-container min-w-8 sm:min-w-1/2 md:min-w-4 lg:min-w-1/3 ml-10 sm:ml-14 md:ml-24 lg:ml-38 xl:ml-48 p-7 lg:p-7 xl:p-14 2xl:p-16 border 2xl:py-16 2xl:pl-16">
           <a href="#">
             <svg class="w-3 sm:w-4 lg:w-5 xl:w-7 2xl:w-9" viewBox="0 0 28 28" fill="none"
               xmlns="http://www.w3.org/2000/svg">
@@ -864,12 +867,15 @@
             </svg>
           </a>
 
-          <p class="presently-header-text inv font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl xl:text-lg4xl 2xl:text-7xl mt-5 lg:mt-10 dark:text-white">
+          <p
+            class="presently-header-text inv font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl xl:text-lg4xl 2xl:text-7xl mt-5 lg:mt-10 dark:text-white">
             Presently
           </p>
 
-          <p class="presently-details-text font-sf text-primary text-xs xl:text-sm 2xl:text-lg mt-2 lg:mt-4 2xl:mt-6 sm:pr-16 md:pr-0 lg:pr-10 2xl:pr-20 leading-5 2xl:leading-7">
-            Presently is a UI presentation mockup resource that gives you access to more than 100 free UI mockups and 5k downloads.
+          <p
+            class="presently-details-text font-sf text-primary text-xs xl:text-sm 2xl:text-lg mt-2 lg:mt-4 2xl:mt-6 sm:pr-16 md:pr-0 lg:pr-10 2xl:pr-20 leading-5 2xl:leading-7">
+            Presently is a UI presentation mockup resource that gives you access to more than 100 free UI mockups and 5k
+            downloads.
           </p>
 
           <p class="open-in-figma-link text-xs xl:text-sm 2xl:text-lg mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
@@ -886,7 +892,8 @@
           </p>
         </div>
 
-        <div class="memoji-container min-w-8 sm:min-w-1/2 md:min-w-4 lg:min-w-1/3 p-7 lg:p-7 xl:p-14 2xl:p-16 border 2xl:py-16 2xl:pl-16">
+        <div
+          class="memoji-container min-w-8 sm:min-w-1/2 md:min-w-4 lg:min-w-1/3 p-7 lg:p-7 xl:p-14 2xl:p-16 border 2xl:py-16 2xl:pl-16">
           <a href="#">
             <svg class="w-3 sm:w-4 lg:w-5 xl:w-7 2xl:w-9" viewBox="0 0 28 28" fill="none"
               xmlns="http://www.w3.org/2000/svg">
@@ -906,11 +913,11 @@
 
           <p
             class="memoji-details-text font-sf text-primary text-xs xl:text-sm 2xl:text-lg mt-2 lg:mt-4 2xl:mt-6 sm:pr-16 md:pr-0 lg:pr-10 2xl:pr-20 leading-5 2xl:leading-7">
-            Memoji is a pack of avatars you can plug into your designs. Memoji has been very useful for tons of designers on the Figma community with over 10 downloads.
+            Memoji is a pack of avatars you can plug into your designs. Memoji has been very useful for tons of
+            designers on the Figma community with over 10 downloads.
           </p>
 
-          <p
-            class="open-in-figma-link text-xs xl:text-sm 2xl:text-lg mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
+          <p class="open-in-figma-link text-xs xl:text-sm 2xl:text-lg mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
             <a href="https://www.figma.com/community/file/895239514338276669" target="blank"
               class="open-in-figma-text font-sf text-primary">Open in
               Figma</a>
@@ -924,7 +931,8 @@
           </p>
         </div>
 
-        <div class="desktop-mockup-container min-w-8 sm:min-w-1/2 md:min-w-4 lg:min-w-1/3 p-7 lg:p-7 xl:p-14 2xl:p-16 border 2xl:py-16 2xl:pl-16">
+        <div
+          class="desktop-mockup-container min-w-8 sm:min-w-1/2 md:min-w-4 lg:min-w-1/3 p-7 lg:p-7 xl:p-14 2xl:p-16 border 2xl:py-16 2xl:pl-16">
           <a href="#">
             <svg class="w-3 sm:w-4 lg:w-5 xl:w-7 2xl:w-9" viewBox="0 0 28 28" fill="none"
               xmlns="http://www.w3.org/2000/svg">
@@ -944,11 +952,11 @@
 
           <p
             class="desktop-mockup-details-text font-sf text-primary text-xs xl:text-sm 2xl:text-lg mt-2 lg:mt-4 2xl:mt-6 sm:pr-16 md:pr-0 lg:pr-10 2xl:pr-20 leading-5 2xl:leading-7">
-            This is Presently a Desktop mockup for desktop UI designs. This is an extension of the very patronized Presently mockup.
+            This is Presently a Desktop mockup for desktop UI designs. This is an extension of the very patronized
+            Presently mockup.
           </p>
 
-          <p
-            class="open-in-figma-link text-xs xl:text-sm 2xl:text-lg mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
+          <p class="open-in-figma-link text-xs xl:text-sm 2xl:text-lg mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
             <a href="https://www.figma.com/community/file/923699931796811484" target="blank"
               class="open-in-figma-text font-sf text-primary">Open in Figma</a>
             <a href="#" class="">
@@ -961,7 +969,8 @@
           </p>
         </div>
 
-        <div class="flat-map-container min-w-8 sm:min-w-1/2 md:min-w-4 lg:min-w-1/3 p-7 lg:p-7 xl:p-14 2xl:p-16 border 2xl:py-16 2xl:pl-16">
+        <div
+          class="flat-map-container min-w-8 sm:min-w-1/2 md:min-w-4 lg:min-w-1/3 p-7 lg:p-7 xl:p-14 2xl:p-16 border 2xl:py-16 2xl:pl-16">
           <a href="#">
             <svg class="w-3 sm:w-4 lg:w-5 xl:w-7 2xl:w-9" viewBox="0 0 28 28" fill="none"
               xmlns="http://www.w3.org/2000/svg">
@@ -981,11 +990,11 @@
 
           <p
             class="flat-map-details-text font-sf text-primary text-xs xl:text-sm 2xl:text-lg mt-2 lg:mt-4 2xl:mt-6 sm:pr-16 md:pr-0 lg:pr-10 2xl:pr-20 leading-5 2xl:leading-7">
-            Flat map is a simple flat map UI created primarily for minimalist map styles. Although the flat map is a basic design, it’s got 4k downloads.
+            Flat map is a simple flat map UI created primarily for minimalist map styles. Although the flat map is a
+            basic design, it’s got 4k downloads.
           </p>
 
-          <p
-            class="open-in-figma-link text-xs xl:text-sm 2xl:text-lg mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
+          <p class="open-in-figma-link text-xs xl:text-sm 2xl:text-lg mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
             <a href="https://www.figma.com/community/file/900008065671865843" target="blank"
               class="open-in-figma-text font-sf text-primary">Open in
               Figma</a>
@@ -999,7 +1008,8 @@
           </p>
         </div>
 
-        <div class="world-map-container min-w-8 sm:min-w-1/2 md:min-w-4 lg:min-w-1/3 p-7 lg:p-7 xl:p-14 2xl:p-16 border 2xl:py-16 2xl:pl-16">
+        <div
+          class="world-map-container min-w-8 sm:min-w-1/2 md:min-w-4 lg:min-w-1/3 p-7 lg:p-7 xl:p-14 2xl:p-16 border 2xl:py-16 2xl:pl-16">
           <a href="#">
             <svg class="w-3 sm:w-4 lg:w-5 xl:w-7 2xl:w-9" viewBox="0 0 28 28" fill="none"
               xmlns="http://www.w3.org/2000/svg">
@@ -1023,8 +1033,7 @@
             asset files, online videos and articles.
           </p>
 
-          <p
-            class="open-in-figma-link text-xs xl:text-sm 2xl:text-lg mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
+          <p class="open-in-figma-link text-xs xl:text-sm 2xl:text-lg mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
             <a href="https://www.figma.com/community/file/925168892099134219" target="blank"
               class="open-in-figma-text font-sf text-primary">Open in
               Figma</a>
@@ -1038,7 +1047,8 @@
           </p>
         </div>
 
-        <div class="win-11-container min-w-8 sm:min-w-1/2 md:min-w-4 lg:min-w-1/3 p-7 lg:p-7 xl:p-14 2xl:p-16 border 2xl:py-16 2xl:pl-16">
+        <div
+          class="win-11-container min-w-8 sm:min-w-1/2 md:min-w-4 lg:min-w-1/3 p-7 lg:p-7 xl:p-14 2xl:p-16 border 2xl:py-16 2xl:pl-16">
           <a href="#">
             <svg class="w-3 sm:w-4 lg:w-5 xl:w-7 2xl:w-9" viewBox="0 0 28 28" fill="none"
               xmlns="http://www.w3.org/2000/svg">
@@ -1061,8 +1071,7 @@
             This mockup was created using the new design patterns for the Windows 11.
           </p>
 
-          <p
-            class="open-in-figma-link text-xs xl:text-sm 2xl:text-lg mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
+          <p class="open-in-figma-link text-xs xl:text-sm 2xl:text-lg mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
             <a href="https://www.figma.com/community/file/990081556171733873" target="blank"
               class="open-in-figma-text font-sf text-primary">Open in
               Figma</a>
@@ -1076,7 +1085,8 @@
           </p>
         </div>
 
-        <div class="see-more-container min-w-8 sm:min-w-1/2 md:min-w-4 lg:min-w-1/3 p-7 lg:p-7 xl:p-14 2xl:p-16 border 2xl:py-16 2xl:pl-16">
+        <div
+          class="see-more-container min-w-8 sm:min-w-1/2 md:min-w-4 lg:min-w-1/3 p-7 lg:p-7 xl:p-14 2xl:p-16 border 2xl:py-16 2xl:pl-16">
           <a href="#">
             <svg class="w-3 sm:w-4 lg:w-5 xl:w-7 2xl:w-9" viewBox="0 0 28 28" fill="none"
               xmlns="http://www.w3.org/2000/svg">
@@ -1099,8 +1109,7 @@
             See more creations by Ozenua Oluwatobi.
           </p>
 
-          <p
-            class="open-in-figma-link text-xs xl:text-sm 2xl:text-lg mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
+          <p class="open-in-figma-link text-xs xl:text-sm 2xl:text-lg mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
             <a href="https://www.figma.com/@ozenua_uiux" target="blank"
               class="open-in-figma-text font-sf text-primary">Open in
               Figma</a>
