--- a/src/jumiar.html
+++ b/src/jumiar.html
@@ -125,7 +125,7 @@
                         <desc>Created with Fabric.js 1.7.22</desc>
                         <defs>
                         </defs>
-                        <g transform="translate(128 128) scale(0.72 0.72)" style="">
+                        <g transform="translate(128 128) scale(0.72 0.72)">
                             <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;"
                                 transform="translate(-175.05 -175.05000000000004) scale(3.89 3.89)">
                                 <path
@@ -206,7 +206,7 @@
                         <desc>Created with Fabric.js 1.7.22</desc>
                         <defs>
                         </defs>
-                        <g transform="translate(128 128) scale(0.72 0.72)" style="">
+                        <g transform="translate(128 128) scale(0.72 0.72)">
                             <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;"
                                 transform="translate(-175.05 -175.05000000000004) scale(3.89 3.89)">
                                 <path
