--- a/src/index.html
+++ b/src/index.html
@@ -850,7 +850,7 @@
       </p>
     </div>
 
-    <div class="grid-div overflow-x-scroll w-full">
+    <div class="grid-div overflow-x-hidden w-full">
       <div
         class="grid-div-container flex-nowrap mt-10 lg:mt-16 flex justify-between space-x-10 lg:space-x-24 pr-7 sm:pr-14 md:pr-0 min-w-full">
         <div
