--- a/src/index.html
+++ b/src/index.html
@@ -1189,7 +1189,7 @@
           </h1>
 
           <p>
-            <a class="lets-talk font-sf text-black before:border-t before:border-b before:border dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
+            <a ref="hoverLink" class="lets-talk font-sf text-black before:border-t before:border-b before:border dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
               href="#">
               Let's talk about it.
             </a>
@@ -1233,6 +1233,12 @@
     </div>
   </div>
 
+      <div class="hover-reveal">
+        <div class="hover-reveal__inner">
+          <video src="../assets/videos/out_2.mp4" class="hover-reveal__video" autoplay preload="auto" muted loop playsinline />
+        </div>
+      </div>
+
   <!-- <script type="module" src="js/script.js"></script> -->
   <script type="module" src="js/theme.js"></script>
   <script type="module" src="js/animations.js"></script>
@@ -1243,6 +1249,22 @@
       AOS.init();
       ScrollTrigger.refresh();
     }, 6000));
+  </script>
+
+  <script type="module">
+    import HoverVideo from "../src/js/hoverVideo.js"
+    export default {
+      props: {
+        label: String,
+        assetUrl: String,
+        href: String,
+        index: String
+      },
+      mounted() {
+        const hoverRef = this.$refs.hoverLink;
+        new HoverVideo(hoverRef);
+      }
+    };
   </script>
 </body>
 
