--- a/src/index.html
+++ b/src/index.html
@@ -1226,12 +1226,12 @@
     </div>
   </div>
 
-  <div class="hover-reveal">
+  <!-- <div class="hover-reveal">
     <div class="hover-reveal__inner">
       <video src="../assets/videos/out_2.mp4" class="hover-reveal__video" id="jumiar-video" autoplay preload="auto"
         muted loop playsinline />
     </div>
-  </div>
+  </div> -->
 
   <!-- <script type="module" src="js/script.js"></script> -->
   <script type="module" src="js/theme.js"></script>
