--- a/src/about me.html
+++ b/src/about me.html
@@ -22,7 +22,7 @@
     </script>
 </head>
 
-<body class="bg-white dark:bg-dark overflow-x-hidden">
+<body class="body bg-white dark:bg-dark overflow-y-hidden">
     <div class="container mx-auto px-7 sm:px-14 md:px-16 lg:px-24 xl:px-24 2xl:px-28">
             <nav>
                 <div
@@ -250,8 +250,7 @@
             </p>
         </div>
 
-        <section class="skills-experience opacity-0 mt-20 md:mt-24 lg:mt-28 xl:mt-32 font-normal overflow-hidden"
-            id="featured-projects">
+        <section class="skills-experience opacity-0 mt-20 md:mt-24 lg:mt-28 xl:mt-32 font-normal overflow-hidden"x>
             <p data-aos="fade-right"
                 class="font-sf text-xs lg:text-sm xl:text-base 2xl:text-lg lg:tracking-widest dark:text-white">
                 SKILLS & EXPERIENCE
@@ -1284,7 +1283,6 @@
     <script type="module" src="js/index.js"></script>
     <script type="module" src="js/about me.js"></script>
     <script type="module" src="js/nav.js"></script>
-    <script type="module" src="js/opacity.js"></script>
     <script>
         window.addEventListener("load", init());
 
