--- a/src/cryptly.html
+++ b/src/cryptly.html
@@ -22,7 +22,7 @@
     </script>
 </head>
 
-<body class="bg-white dark:bg-dark">
+<body class="body bg-white dark:bg-dark overflow-y-hidden">
     <div class="container mx-auto px-7 sm:px-14 md:px-16 lg:px-24 xl:px-24 2xl:px-28">
         <nav>
             <div
@@ -116,8 +116,7 @@
             </div>
         </section>
 
-        <div
-            class="theme-toggle-container absolute right-8 sm:right-14 md:right-16 lg:right-24 xl:right-28 2xl:right-32 flex justify-end">
+        <div class="theme-toggle-container absolute right-8 sm:right-14 md:right-16 lg:right-24 xl:right-28 2xl:right-32 flex justify-end">
             <button
                 class="toggle-btn relative rounded-full flex justify-center items-center w-10 lg:w-12 xl:w-14 2xl:w-16 h-10 lg:h-12 xl:h-14 2xl:h-16 z-50 bg-dark dark:bg-white">
                 <div class="cont absolute sun invisible">
@@ -220,7 +219,7 @@
             </button>
         </div>
 
-        <section class="cryptly mt-10">
+        <section class="cryptly opacity-0 mt-10">
             <div class="cryptly-image">
                 <a href="../assets/images/Cryptly.png">
                     <img src="../assets/images/Cryptly.png" alt="">
@@ -591,7 +590,7 @@
         </div>
     </div>
 
-    <footer class="bg-gray-200 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24">
+    <footer class="bg-gray-200 opacity-0 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24">
         <div class="container mx-auto px-4 sm:px-8">
             <div
                 class="first-container before:bg-primary dark:before:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
@@ -652,25 +651,14 @@
                 scrub: true
             }
         })
-
-        gsap.to('.logo', {
-            opacity: 1,
-            delay: 1,
-        })
-
-        gsap.to('nav .nav-container .navlist ul li', {
-            // duration: 1,
-            y: 0,
-            stagger: 0.3,
-            ease: 'back',
-            delay: 1,
-        })
     </script>
     <script src="https://kit.fontawesome.com/049b369bde.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script type="module" src="js/index.js"></script>
+    <script type="module" src="js/opacity.js"></script>
+    <script type="module" src="js/nav.js"></script>
     <script type="module">
         import { gsap } from "gsap/dist/gsap";
         import { ScrollTrigger } from "gsap/dist/ScrollTrigger";
@@ -693,24 +681,6 @@
             text: 'Cryptly: Creating true experience with Cryptocurrency.',
             duration: 2
         })
-
-        gsap.to('.logo', {
-            opacity: 1,
-            delay: 2,
-        })
-
-        gsap.to('nav .nav-container .navlist ul li', {
-            // duration: 1,
-            y: 0,
-            stagger: 0.3,
-            ease: 'back',
-            delay: 2
-        })
-    </script>
-    <script>
-        window.addEventListener('load', setTimeout(() => {
-            AOS.init();
-        }, 2000));
     </script>
 </body>
 
