--- a/src/cryptly.html
+++ b/src/cryptly.html
@@ -78,11 +78,11 @@
                     </a>
                 </div>
 
-                <div class="navlist py-1 overflow-y-hidden hidden lg:block lg:w-60 xl:w-72 2xl:w-84">
+                <div class="navlist py-1 overflow-y-hidden hidden lg:block opacity-0 lg:w-60 xl:w-72 2xl:w-84">
                     <ul class="flex justify-between items-center text-center lg:text-tiny xl:text-xs 2xl:text-sm">
-                        <li><a class="before:black dark:before:bg-white" href="#">CONTACT ME</a></li>
-                        <li><a class="before:black dark:before:bg-white" href="#">CASES</a></li>
-                        <li><a class="before:black dark:before:bg-white" href="#">ABOUT ME</a></li>
+                        <li><a class="before:black dark:before:bg-white" href="#footer">CONTACT ME</a></li>
+                        <li><a class="before:black dark:before:bg-white" href="#featured-projects">CASES</a></li>
+                        <li><a class="before:black dark:before:bg-white" href="about me.html">ABOUT ME</a></li>
                     </ul>
                 </div>
 
@@ -105,7 +105,7 @@
 
             </h1>
 
-            <div class="case-studies w-full flex items-center py-5 sm:py-6 lg:py-7">
+            <div class="case-studies transform scale-50 opacity-0 w-full flex items-center py-5 sm:py-6 lg:py-7">
                 <ul
                     class="case-study-list font-sf w-full text-xs sm:text-sm lg:text-base xl:text-lg 2xl:text-xl text-primary flex justify-between align-center">
                     <li>UX Reasearch</li>
@@ -116,7 +116,8 @@
             </div>
         </section>
 
-        <div class="theme-toggle-container absolute right-8 sm:right-14 md:right-16 lg:right-24 xl:right-28 2xl:right-32 flex justify-end">
+        <div
+            class="theme-toggle-container absolute right-8 sm:right-14 md:right-16 lg:right-24 xl:right-28 2xl:right-32 flex justify-end">
             <button
                 class="toggle-btn relative rounded-full flex justify-center items-center w-10 lg:w-12 xl:w-14 2xl:w-16 h-10 lg:h-12 xl:h-14 2xl:h-16 z-50 bg-dark dark:bg-white">
                 <div class="cont absolute sun invisible">
@@ -593,7 +594,7 @@
     <footer class="bg-gray-200 opacity-0 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24">
         <div class="container mx-auto px-4 sm:px-8">
             <div
-                class="first-container before:bg-primary dark:before:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
+                class="first-container before:bg-black after:bg-black  dark:before:bg-white dark:after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
                 <div
                     class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
                     <h1
@@ -602,7 +603,7 @@
                     </h1>
 
                     <p>
-                        <a class="lets-talk font-sf text-black before:border-t before:border-b before:border dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
+                        <a class="lets-talk font-sf text-black after:border-t after:border-b after:border dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
                             href="#">
                             Let's talk about it.
                         </a>
@@ -631,7 +632,8 @@
         </div>
     </footer>
 
-    <div id="cursor" class="cursor invisible lg:visible before:bg-black dark:before:bg-white">
+    <div id="cursor"
+        class="cursor invisible lg:visible before:bg-black after:bg-black  dark:before:bg-white dark:after:bg-white">
 
     </div>
 
