--- a/src/paysure.html
+++ b/src/paysure.html
@@ -22,7 +22,7 @@
     </script>
 </head>
 
-<body class="bg-white dark:bg-dark">
+<body class="body bg-white dark:bg-dark overflow-y-hidden">
     <div class="container mx-auto px-7 sm:px-14 md:px-16 lg:px-24 xl:px-24 2xl:px-28">
         <nav>
             <div
@@ -78,11 +78,11 @@
                     </a>
                 </div>
 
-                <div class="navlist py-1 overflow-y-hidden hidden lg:block lg:w-60 xl:w-72 2xl:w-84">
+                <div class="navlist py-1 overflow-y-hidden hidden lg:block opacity-0 lg:w-60 xl:w-72 2xl:w-84">
                     <ul class="flex justify-between items-center text-center lg:text-tiny xl:text-xs 2xl:text-sm">
-                        <li><a class="before:black dark:before:bg-white" href="#">CONTACT ME</a></li>
-                        <li><a class="before:black dark:before:bg-white" href="#">CASES</a></li>
-                        <li><a class="before:black dark:before:bg-white" href="#">ABOUT ME</a></li>
+                        <li><a class="before:black dark:before:bg-white" href="#footer">CONTACT ME</a></li>
+                        <li><a class="before:black dark:before:bg-white" href="#featured-projects">CASES</a></li>
+                        <li><a class="before:black dark:before:bg-white" href="about me.html">ABOUT ME</a></li>
                     </ul>
                 </div>
 
@@ -105,7 +105,7 @@
 
             </h1>
 
-            <div class="case-studies w-full flex items-center py-5 sm:py-6 lg:py-7">
+            <div class="case-studies transform scale-50 opacity-0 w-full flex items-center py-5 sm:py-6 lg:py-7">
                 <ul
                     class="case-study-list font-sf w-full text-xs sm:text-sm lg:text-base xl:text-lg 2xl:text-xl text-primary flex justify-between align-center">
                     <li>UX Reasearch</li>
@@ -220,7 +220,7 @@
             </button>
         </div>
 
-        <section class="paysure mt-10 lg:mt-20 xl:mt-32">
+        <section class="paysure opacity-0 mt-10 lg:mt-20 xl:mt-32">
             <div class="overview space-y-5 sm:space-y-6 2xl:space-y-7">
                 <h3
                     class="overview-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
@@ -418,10 +418,10 @@
         </div>
     </div>
 
-    <footer class="bg-gray-200 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24">
+    <footer class="bg-footerlight dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24" id="footer">
         <div class="container mx-auto px-4 sm:px-8">
             <div
-                class="first-container before:bg-primary dark:before:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
+                class="first-container before:bg-black after:bg-black  dark:before:bg-white dark:after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
                 <div
                     class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
                     <h1
@@ -430,7 +430,8 @@
                     </h1>
 
                     <p>
-                        <a class="lets-talk font-sf text-black before:border-t before:border-b before:border dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
+                        <a data-video-src="jumiar-video"
+                            class="lets-talk font-sf text-black after:border-t after:border-b after:border dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
                             href="#">
                             Let's talk about it.
                         </a>
@@ -444,11 +445,11 @@
                         <a data-aos="fade-up" class="instagram-footer-link" href="https://instagram.com/ozenua_uiux"
                             target="blank">Instagram</a>
                         <a data-aos="fade-up" data-aos-delay="100" class="youtube-footer-link" href="#">Youtube</a>
-                        <a data-aos="fade-up" class="dribble-footer-link" href="https://dribbble.com/ozenua_uiux"
-                            target="blank">Dribble</a>
-                        <a data-aos="fade-up" class="linkedin-footer-link"
+                        <a data-aos="fade-up" data-aos-delay="200" class="dribble-footer-link"
+                            href="https://dribbble.com/ozenua_uiux" target="blank">Dribble</a>
+                        <a data-aos="fade-up" data-aos-delay="300" class="linkedin-footer-link"
                             href="https://www.linkedin.com/in/ozenua-oluwatobi/" target="blank">LinkedIn</a>
-                        <a data-aos="fade-up" data-aos-offset="100" class="behance-footer-link"
+                        <a data-aos="fade-up" data-aos-delay="400" data-aos-offset="100" class="behance-footer-link"
                             href="https://behance.net/ozenua_uiux" target="blank">Behance</a>
                         <a data-aos="fade-up" data-aos-delay="500" data-aos-offset="100" class="twitter-footer-link"
                             href="https://twitter.com/ @ozenua_uiux">Twitter</a>
@@ -459,7 +460,8 @@
         </div>
     </footer>
 
-    <div id="cursor" class="cursor invisible lg:visible before:bg-black dark:before:bg-white">
+    <div id="cursor"
+        class="cursor invisible lg:visible before:bg-black after:bg-black  dark:before:bg-white dark:after:bg-white">
 
         <script type="module" src="js/theme.js"></script>
         <script type="module">
@@ -477,25 +479,14 @@
                     scrub: true
                 }
             })
-
-            gsap.to('.logo', {
-                opacity: 1,
-                delay: 1,
-            })
-
-            gsap.to('nav .nav-container .navlist ul li', {
-                // duration: 1,
-                y: 0,
-                stagger: 0.3,
-                ease: 'back',
-                delay: 1,
-            })
         </script>
         <script src="https://kit.fontawesome.com/049b369bde.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script type="module" src="js/index.js"></script>
+        <script type="module" src="js/opacity.js"></script>
+        <script type="module" src="js/nav.js"></script>
         <script type="module">
             import { gsap } from "gsap/dist/gsap";
             import { ScrollTrigger } from "gsap/dist/ScrollTrigger";
