--- a/src/about me.html
+++ b/src/about me.html
@@ -1233,8 +1233,7 @@
 
     <footer class="bg-gray-200 opacity-0 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24">
         <div class="container mx-auto px-4 sm:px-8">
-            <div
-                class="first-container before:bg-black dark:before:bg-blue-500 dark:after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
+            <div class="first-container before:bg-black dark:before:white dark:after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
                 <div
                     class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
                     <h1
