--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
   </script> -->
 </head>
 
-<body class="body bg-white dark:bg-dark overflow-x-hidden">
+<body class="body bg-white dark:bg-dark overflow-y-hidden">
   <div class="container relative mx-auto px-8 sm:px-14 md:px-16 lg:px-24 xl:px-28 2xl:px-32">
     <nav>
       <div
@@ -1224,14 +1224,13 @@
       <img class="bg-dark dark:bg-white" src="../assets/images/Cryptly.png" alt="" id="cryptly-image">
       <img class="bg-dark dark:bg-white" src="../assets/images/Paysure Visual Design 4.png" alt="" id="paysure-image">
     </div>
-
-    <div class="view-case">
-      <img class="bg-dark dark:bg-white" src="../assets/images/Jumiar Test AR 1.png" alt="" id="jumiar-image">
-      <img class="bg-dark dark:bg-white" src="../assets/images/Gt Welcome.png" alt="" id="gt-image">
-      <img class="bg-dark dark:bg-white" src="../assets/images/Cryptly.png" alt="" id="cryptly-image">
-      <img class="bg-dark dark:bg-white" src="../assets/images/Paysure Visual Design 4.png" alt="" id="paysure-image">
-    </div>
   </div>
+
+    <div id="view-case" ref="view-case" class="view-case invisible lg:visible flex justify-center items-center">
+      <p class="uppercase view-case-text text-xs font-sf text-black dark:text-white z-50">
+        view case
+      </p>
+    </div>
 
   <!-- <div class="hover-reveal">
     <div class="hover-reveal__inner">
