--- a/src/about me.html
+++ b/src/about me.html
@@ -10,15 +10,20 @@
     <link rel="stylesheet" href="sass/texts.scss">
     <link rel="stylesheet" href="sass/cursor.scss">
     <link rel="stylesheet" href="sass/style.scss">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/TextPlugin.min.js"></script>
+
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
     <script type="module">
-        // import $ from "jquery";
-        // window.addEventListener('load', () => {
-        //     $('html, body').animate({ scrollTop: 0 }, 'fast')
-        // });
+        import $ from "jquery";
+        window.addEventListener('load', () => {
+            $('html, body').animate({ scrollTop: 0 }, 'fast')
+        });
     </script>
 </head>
 
@@ -78,23 +83,14 @@
                     </a>
                 </div>
 
-                <div class="navlist py-1 overflow-y-hidden hidden lg:block opacity-0 lg:w-60 xl:w-72 2xl:w-84">
-                    <ul class="flex justify-between items-center text-center lg:text-tiny xl:text-xs 2xl:text-sm">
-                        <li><a class="before:black dark:before:bg-white" href="#footer">CONTACT ME</a></li>
-                        <li><a class="before:black dark:before:bg-white" href="#featured-projects">CASES</a></li>
-                        <li><a class="before:black dark:before:bg-white" href="about me.html">ABOUT ME</a></li>
+                <div class="navlist py-1 overflow-y-hidden opacity-0 w-auto sm:w-52 md:w-60 xl:w-72 2xl:w-84">
+                    <ul class="sm:flex justify-between items-center text-center text-tiny xl:text-xs 2xl:text-sm">
+                        <li><a class="hidden sm:block after:bg-black dark:after:bg-white" href="#footer">CONTACT
+                                ME</a></li>
+                        <li><a class="hidden sm:block after:bg-black dark:after:bg-white"
+                                href="https://behance.net/ozenua_uiux">CASES</a></li>
+                        <li><a class="after:bg-black dark:after:bg-white" href="about me.html">ABOUT ME</a></li>
                     </ul>
-                </div>
-
-                <!-- Hamburger for small screens -->
-                <div class="small-menu-burger flex items-center lg:hidden">
-                    <a href="#">
-                        <div id="menu-btn" class="menu-btn p-1 transform scale-0" onclick="openMenu()">
-                            <div class="menu-btn-burger rounded-sm rounded-l rounded-r">
-
-                            </div>
-                        </div>
-                    </a>
                 </div>
             </div>
         </nav>
@@ -251,7 +247,7 @@
             </p>
         </div>
 
-        <section class="skills-experience opacity-0 mt-20 md:mt-24 lg:mt-28 xl:mt-32 font-normal overflow-hidden" x>
+        <section class="skills-experience opacity-0 mt-32 md:mt-40 lg:mt-52 xl:mt-56 font-normal overflow-hidden" x>
             <p data-aos="fade-right"
                 class="font-sf text-xs lg:text-sm xl:text-base 2xl:text-lg lg:tracking-widest dark:text-white">
                 SKILLS & EXPERIENCE
@@ -264,7 +260,7 @@
         </section>
     </div>
 
-    <div class="horizontal-skills opacity-0 overflow-x-hidden space-y-5 mt-16 md:mt-20 lg:mt-24 xl:mt-28">
+    <div class="horizontal-skills opacity-0 overflow-x-hidden space-y-5 mt-32 md:mt-40 lg:mt-52 xl:mt-56">
         <p
             class="to-left font-caudex dark:text-white text-4xl md:text-5xl lg:text-lg5xl xl:text-7xl 2xl:text-8xl flex whitespace-nowrap space-x-8 lg:space-x-12 xl:space-x-14 2xl:space-x-16">
             <span class="ml-8 md:ml-16 lg:ml-40 2xl:ml-60">
@@ -1222,7 +1218,7 @@
         </section>
 
         <section class="thanks mt-32 xl:mt-60">
-            <div class="thanks-container">
+            <div data-image-src="client-image" class="header-text-container">
                 <h1
                     class="uppercase font-caudex text-dark text-lg4xl md:text-5xl lg:text-6xl xl:text-7xl 2xl:text-9xl text-center">
                     thanks for reading
@@ -1231,9 +1227,11 @@
         </section>
     </div>
 
-    <footer class="bg-gray-200 opacity-0 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24">
+    <footer class="bg-gray-200 opacity-0 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24 lg:mt-40"
+        id="footer">
         <div class="container mx-auto px-4 sm:px-8">
-            <div class="first-container before:bg-black dark:before:white dark:after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
+            <div
+                class="first-container before:bg-black dark:before:bg-white after:bg-black dark:after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
                 <div
                     class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
                     <h1
@@ -1243,7 +1241,7 @@
 
                     <p>
                         <a class="lets-talk font-sf text-black after:border-t after:border-b after:border dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
-                            href="#">
+                            href="https://www.linkedin.com/in/ozenua-oluwatobi/">
                             Let's talk about it.
                         </a>
                     </p>
@@ -1256,8 +1254,8 @@
                         <a data-aos="fade-up" class="instagram-footer-link" href="https://instagram.com/ozenua_uiux"
                             target="blank">Instagram</a>
                         <a data-aos="fade-up" data-aos-delay="100" class="youtube-footer-link" href="#">Youtube</a>
-                        <a data-aos="fade-up" class="dribble-footer-link" href="https://dribbble.com/ozenua_uiux"
-                            target="blank">Dribble</a>
+                        <a data-aos="fade-up" class="dribbble-footer-link" href="https://dribbble.com/ozenua_uiux"
+                            target="blank">dribbble</a>
                         <a data-aos="fade-up" class="linkedin-footer-link"
                             href="https://www.linkedin.com/in/ozenua-oluwatobi/" target="blank">LinkedIn</a>
                         <a data-aos="fade-up" data-aos-offset="100" class="behance-footer-link"
@@ -1273,13 +1271,17 @@
 
     <div id="cursor"
         class="cursor invisible lg:visible before:bg-black after:bg-black  dark:before:bg-white dark:after:bg-white">
-
+        <div class="cursor-media s">
+            <img class="bg-dark dark:bg-white" src="../assets/images/Jumiar Test AR 1.png" alt="" id="jumiar-image">
+            <img class="bg-dark dark:bg-white" src="../assets/images/Gt Welcome.png" alt="" id="gt-image">
+            <img class="bg-dark dark:bg-white" src="../assets/images/Cryptly.png" alt="" id="cryptly-image">
+            <img class="bg-dark dark:bg-white" src="../assets/images/Paysure Visual Design 4.png" alt=""
+                id="paysure-image">
+            <img class="bg-dark dark:bg-white w-3/4" src="../assets/images/Ozenua Himself.png" alt="" id="client-image">
+        </div>
     </div>
     <script type="module" src="js/theme.js"></script>
     <script src="https://kit.fontawesome.com/049b369bde.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script type="module" src="js/index.js"></script>
     <script type="module" src="js/about me.js"></script>
