--- a/src/cryptly.html
+++ b/src/cryptly.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="sass/cursor.scss">
     <link rel="stylesheet" href="sass/style.scss">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
@@ -78,23 +82,14 @@
                     </a>
                 </div>
 
-                <div class="navlist py-1 overflow-y-hidden hidden lg:block opacity-0 lg:w-60 xl:w-72 2xl:w-84">
-                    <ul class="flex justify-between items-center text-center lg:text-tiny xl:text-xs 2xl:text-sm">
-                        <li><a class="before:black dark:before:bg-white" href="#footer">CONTACT ME</a></li>
-                        <li><a class="before:black dark:before:bg-white" href="#featured-projects">CASES</a></li>
-                        <li><a class="before:black dark:before:bg-white" href="about me.html">ABOUT ME</a></li>
+                <div class="navlist py-1 overflow-y-hidden opacity-0 w-auto sm:w-52 md:w-60 xl:w-72 2xl:w-84">
+                    <ul class="sm:flex justify-between items-center text-center text-tiny xl:text-xs 2xl:text-sm">
+                        <li><a class="hidden sm:block after:bg-black dark:after:bg-white" href="#footer">CONTACT
+                                ME</a></li>
+                        <li><a class="hidden sm:block after:bg-black dark:after:bg-white"
+                                href="https://behance.net/ozenua_uiux">CASES</a></li>
+                        <li><a class="after:bg-black dark:after:bg-white" href="about me.html">ABOUT ME</a></li>
                     </ul>
-                </div>
-
-                <!-- Hamburger for small screens -->
-                <div class="small-menu-burger flex items-center lg:hidden">
-                    <a href="#">
-                        <div id="menu-btn" class="menu-btn p-1 transform scale-0" onclick="openMenu()">
-                            <div class="menu-btn-burger rounded-sm rounded-l rounded-r">
-
-                            </div>
-                        </div>
-                    </a>
                 </div>
             </div>
         </nav>
@@ -566,7 +561,7 @@
         </section>
 
         <div class="navigators flex justify-center mt-10 lg:mt-48">
-            <div class="navigators-container w-1/3 flex justify-between items-center">
+            <div class="navigators-container w-full sm:w-1/2 lg:w-1/3 flex justify-between items-center">
                 <a href="gtworld.html">
                     <div class="navigator-right flex justify-center items-center">
                         <i class="fas fa-chevron-left mr-5 text-black dark:text-white"></i>
@@ -578,7 +573,7 @@
                     </div>
                 </a>
 
-                <a href="paysure.html">
+                <!-- <a href="paysure.html">
                     <div class="navigator-right flex justify-center items-center">
                         <h1 class="font-sf text-xs lg:text-sm xl:text-base 2xl:text-lg lg:tracking-widest text-primary">
                             Paysure
@@ -586,7 +581,7 @@
 
                         <i class="fas fa-chevron-right ml-5 text-black dark:text-white"></i>
                     </div>
-                </a>
+                </a> -->
             </div>
         </div>
     </div>
@@ -604,7 +599,7 @@
 
                     <p>
                         <a class="lets-talk font-sf text-black after:border-t after:border-b after:border dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
-                            href="#">
+                            href="https://www.linkedin.com/in/ozenua-oluwatobi/">
                             Let's talk about it.
                         </a>
                     </p>
@@ -617,8 +612,8 @@
                         <a data-aos="fade-up" class="instagram-footer-link" href="https://instagram.com/ozenua_uiux"
                             target="blank">Instagram</a>
                         <a data-aos="fade-up" data-aos-delay="100" class="youtube-footer-link" href="#">Youtube</a>
-                        <a data-aos="fade-up" class="dribble-footer-link" href="https://dribbble.com/ozenua_uiux"
-                            target="blank">Dribble</a>
+                        <a data-aos="fade-up" class="dribbble-footer-link" href="https://dribbble.com/ozenua_uiux"
+                            target="blank">dribbble</a>
                         <a data-aos="fade-up" class="linkedin-footer-link"
                             href="https://www.linkedin.com/in/ozenua-oluwatobi/" target="blank">LinkedIn</a>
                         <a data-aos="fade-up" data-aos-offset="100" class="behance-footer-link"
@@ -655,19 +650,17 @@
         })
     </script>
     <script src="https://kit.fontawesome.com/049b369bde.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script type="module" src="js/index.js"></script>
     <script type="module" src="js/opacity.js"></script>
     <script type="module" src="js/nav.js"></script>
+    <script type="module" src="js/animations.js"></script>
     <script type="module">
         import { gsap } from "gsap/dist/gsap";
-        import { ScrollTrigger } from "gsap/dist/ScrollTrigger";
+        // import { ScrollTrigger } from "gsap/dist/ScrollTrigger";
         import { TextPlugin } from "gsap/TextPlugin";
 
 
-        gsap.registerPlugin(ScrollTrigger, TextPlugin);
+        gsap.registerPlugin(TextPlugin);
         // Pin button
         gsap.to('.toggle-btn', {
             scrollTrigger: {
@@ -683,6 +676,12 @@
             text: 'Cryptly: Creating true experience with Cryptocurrency.',
             duration: 2
         })
+    </script>
+
+    <script>
+        window.addEventListener('load', setTimeout(() => {
+            AOS.init();
+        }, 1000));
     </script>
 </body>
 
