--- a/src/jumiar.html
+++ b/src/jumiar.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="sass/cursor.scss">
     <link rel="stylesheet" href="sass/style.scss">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
@@ -78,23 +82,14 @@
                     </a>
                 </div>
 
-                <div class="navlist py-1 opacity-0 hidden lg:block lg:w-60 xl:w-72 2xl:w-84">
-                    <ul class="flex justify-between items-center text-center lg:text-tiny xl:text-xs 2xl:text-sm">
-                        <li><a class="before:black dark:before:bg-white" href="#footer">CONTACT ME</a></li>
-                        <li><a class="before:black dark:before:bg-white" href="#">CASES</a></li>
-                        <li><a class="before:black dark:before:bg-white" href="#">ABOUT ME</a></li>
+                <div class="navlist py-1 overflow-y-hidden opacity-0 w-auto sm:w-52 md:w-60 xl:w-72 2xl:w-84">
+                    <ul class="sm:flex justify-between items-center text-center text-tiny xl:text-xs 2xl:text-sm">
+                        <li><a class="hidden sm:block after:bg-black dark:after:bg-white" href="#footer">CONTACT
+                                ME</a></li>
+                        <li><a class="hidden sm:block after:bg-black dark:after:bg-white"
+                                href="https://behance.net/ozenua_uiux">CASES</a></li>
+                        <li><a class="after:bg-black dark:after:bg-white" href="about me.html">ABOUT ME</a></li>
                     </ul>
-                </div>
-
-                <!-- Hamburger for small screens -->
-                <div class="small-menu-burger flex items-center lg:hidden">
-                    <a href="#">
-                        <div id="menu-btn" class="menu-btn p-1 transform scale-0" onclick="openMenu()">
-                            <div class="menu-btn-burger rounded-sm rounded-l rounded-r">
-
-                            </div>
-                        </div>
-                    </a>
                 </div>
             </div>
         </nav>
@@ -607,7 +602,7 @@
 
                     <p>
                         <a class="lets-talk font-sf text-black after:border-t after:border-b after:border dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
-                            href="#">
+                            href="https://www.linkedin.com/in/ozenua-oluwatobi/">
                             Let's talk about it.
                         </a>
                     </p>
@@ -620,8 +615,8 @@
                         <a data-aos="fade-up" class="instagram-footer-link" href="https://instagram.com/ozenua_uiux"
                             target="blank">Instagram</a>
                         <a data-aos="fade-up" data-aos-delay="100" class="youtube-footer-link" href="#">Youtube</a>
-                        <a data-aos="fade-up" class="dribble-footer-link" href="https://dribbble.com/ozenua_uiux"
-                            target="blank">Dribble</a>
+                        <a data-aos="fade-up" class="dribbble-footer-link" href="https://dribbble.com/ozenua_uiux"
+                            target="blank">dribbble</a>
                         <a data-aos="fade-up" class="linkedin-footer-link"
                             href="https://www.linkedin.com/in/ozenua-oluwatobi/" target="blank">LinkedIn</a>
                         <a data-aos="fade-up" data-aos-offset="100" class="behance-footer-link"
@@ -642,13 +637,11 @@
 
     <script type="module" src="js/theme.js"></script>
     <script src="https://kit.fontawesome.com/049b369bde.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script type="module" src="js/index.js"></script>
     <script type="module" src="js/opacity.js"></script>
     <script type="module" src="js/nav.js"></script>
+    <script type="module" src="js/animations.js"></script>
+
     <script type="module">
         import { gsap } from "gsap/dist/gsap";
         import { ScrollTrigger } from "gsap/dist/ScrollTrigger";
@@ -673,6 +666,11 @@
         })
     </script>
 
+    <script>
+        window.addEventListener('load', setTimeout(() => {
+            AOS.init();
+        }, 1000));
+    </script>
 </body>
 
 </html>
