--- a/src/gtworld.html
+++ b/src/gtworld.html
@@ -710,27 +710,26 @@
         </div>
     </div>
 
-    <footer class="bg-gray-200 opacity-0 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24">
+    <footer class="bg-black opacity-0 lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24">
         <div class="container mx-auto px-4 sm:px-8">
             <div
                 class="first-container before:bg-black after:bg-black  dark:before:bg-white dark:after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
                 <div
                     class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
                     <h1
-                        class="got-an-idea inv font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl">
+                        class="got-an-idea inv font-caudex text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl">
                         Got an idea?
                     </h1>
 
                     <p>
-                        <a class="lets-talk font-sf text-black after:border-t after:border-b after:border dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
+                        <a class="lets-talk font-sf after:border-t after:border-b after:border text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
                             href="https://www.linkedin.com/in/ozenua-oluwatobi/">
                             Let's talk about it.
                         </a>
                     </p>
                 </div>
 
-                <div
-                    class="contacts font-sf md:w-2/4 text-black dark:text-white text-xs lg:text-sm xl:text-base 2xl:text-lg">
+                <div class="contacts font-sf md:w-2/4 text-white text-xs lg:text-sm xl:text-base 2xl:text-lg">
                     <div
                         class="grid grid-cols-4 gap-y-3 xl:gap-y-7 text-xs lg:text-base items-center overflow-y-hidden">
                         <a data-aos="fade-up" class="instagram-footer-link" href="https://instagram.com/ozenua_uiux"
@@ -743,11 +742,18 @@
                         <a data-aos="fade-up" data-aos-offset="100" class="behance-footer-link"
                             href="https://behance.net/ozenua_uiux" target="blank">Behance</a>
                         <a data-aos="fade-up" data-aos-delay="500" data-aos-offset="100" class="twitter-footer-link"
-                            href="https://twitter.com/ @ozenua_uiux">Twitter</a>
+                            href="https://twitter.com/@ozenua_uiux">Twitter</a>
                         </ul>
                     </div>
                 </div>
             </div>
+
+                <div class="credits text-center mt-14 lg:mt-20 2xl:mt-24">
+                    <p class="developer font-sf text-primary text-tiny lg:text-xs xl:text-sm 2xl:text-base">
+                        Developed by <span><a class="text-white uppercase" href="https://www.linkedin.com/in/ganiyu-idris/"
+                                target="blank">ganiyu idris</a></span>
+                    </p>
+                </div>
         </div>
     </footer>
 
