--- a/src/about me.html
+++ b/src/about me.html
@@ -260,7 +260,7 @@
         </section>
     </div>
 
-    <div class="horizontal-skills opacity-0 overflow-x-hidden space-y-5 mt-32 md:mt-40 lg:mt-52 xl:mt-56">
+    <div class="horizontal-skills opacity-0 overflow-x-hidden space-y-5 mt-16 md:mt-20 lg:mt-28 xl:mt-28">
         <p
             class="to-left font-caudex dark:text-white text-4xl md:text-5xl lg:text-lg5xl xl:text-7xl 2xl:text-8xl flex whitespace-nowrap space-x-8 lg:space-x-12 xl:space-x-14 2xl:space-x-16">
             <span class="ml-8 md:ml-16 lg:ml-40 2xl:ml-60">
@@ -341,7 +341,7 @@
     </div>
 
     <div class="container opacity-0 mx-auto px-7 sm:px-14 md:px-16 lg:px-24 xl:px-24 2xl:px-28">
-        <section class="tools mt-20 md:mt-24 lg:mt-28 xl:mt-40">
+        <section class="tools mt-40 md:mt-48 lg:mt-56 xl:mt-64">
             <div
                 class="tools-container flex space-x-10 sm:space-x-20 md:space-x-28 lg:space-x-36 xl:space-x-48 2xl:space-x-52 py-10">
                 <div class="left-container">
@@ -646,7 +646,7 @@
             </div>
         </section>
 
-        <section class="works mt-20 lg:mt-28 xl:mt-40">
+        <section class="works mt-40 md:mt-48 lg:mt-56 xl:mt-64">
             <div
                 class="works-container flex space-x-10 sm:space-x-20 md:space-x-28 lg:space-x-36 xl:space-x-48 2xl:space-x-52 py-10">
                 <div class="left-container">
@@ -973,7 +973,7 @@
             </div>
         </section>
 
-        <section class="school mt-20 lg:mt-28 xl:mt-40">
+        <section class="school mt-40 md:mt-48 lg:mt-56 xl:mt-64">
             <div
                 class="school-container flex space-x-10 sm:space-x-20 md:space-x-28 lg:space-x-36 xl:space-x-48 2xl:space-x-52 py-10">
                 <div class="left-container">
@@ -1217,7 +1217,7 @@
             </div>
         </section>
 
-        <section class="thanks mt-32 xl:mt-60">
+        <section class="thanks mt-52 lg:mt-64 xl:mt-72">
             <div data-image-src="client-image" class="header-text-container">
                 <h1
                     class="uppercase font-caudex text-dark text-lg4xl md:text-5xl lg:text-6xl xl:text-7xl 2xl:text-9xl text-center">
@@ -1227,28 +1227,26 @@
         </section>
     </div>
 
-    <footer class="bg-gray-200 opacity-0 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24 lg:mt-40"
-        id="footer">
+    <footer class="bg-black opacity-0 lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24 lg:mt-40" id="footer">
         <div class="container mx-auto px-4 sm:px-8">
             <div
                 class="first-container before:bg-black dark:before:bg-white after:bg-black dark:after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
                 <div
                     class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
                     <h1
-                        class="got-an-idea inv font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl">
+                        class="got-an-idea inv font-caudex text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl">
                         Got an idea?
                     </h1>
 
                     <p>
-                        <a class="lets-talk font-sf text-black after:border-t after:border-b after:border dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
+                        <a class="lets-talk font-sf after:border-t after:border-b after:border text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
                             href="https://www.linkedin.com/in/ozenua-oluwatobi/">
                             Let's talk about it.
                         </a>
                     </p>
                 </div>
 
-                <div
-                    class="contacts font-sf md:w-2/4 text-black dark:text-white text-xs lg:text-sm xl:text-base 2xl:text-lg">
+                <div class="contacts font-sf md:w-2/4 text-white text-xs lg:text-sm xl:text-base 2xl:text-lg">
                     <div
                         class="grid grid-cols-4 gap-y-3 xl:gap-y-7 text-xs lg:text-base items-center overflow-y-hidden">
                         <a data-aos="fade-up" class="instagram-footer-link" href="https://instagram.com/ozenua_uiux"
@@ -1266,6 +1264,13 @@
                     </div>
                 </div>
             </div>
+
+                <div class="credits text-center mt-14 lg:mt-20 2xl:mt-24">
+                    <p class="developer font-sf text-primary text-tiny lg:text-xs xl:text-sm 2xl:text-base">
+                        Developed by <span><a class="text-white uppercase" href="https://www.linkedin.com/in/ganiyu-idris/"
+                                target="blank">ganiyu idris</a></span>
+                    </p>
+                </div>
         </div>
     </footer>
 
