--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" async></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/ScrollToPlugin.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" async></script>
   <script type="module">
@@ -31,7 +32,7 @@
 
 <body class="body bg-white dark:bg-dark overflow-y-hidden">
   <div class="container relative mx-auto px-8 sm:px-14 md:px-16 lg:px-24 xl:px-28 2xl:px-32">
-    <nav>
+    <nav class="nav">
       <div
         class="nav-container font-sf dark:text-white py-4 sm:py-6 lg:py-7 xl:py-9 2xl:py-12 flex justify-between items-center tracking-widest">
         <div class="logo opacity-0">
@@ -96,7 +97,7 @@
       </div>
     </nav>
 
-    <section class="hero py-14 md:py-16">
+    <section class="hero reative py-14 md:py-16">
       <div class="hero-container">
         <!-- Hero header for small screens -->
         <h1
@@ -114,7 +115,7 @@
         <div class="scroll-and-text lg:w-2/3 mt-5 lg:mt-5 md:hidden justify-between items-center">
           <p
             class="small-hero-details-text opacity-0 font-sf text-xs sm:text-base text-left text-primary lg:mb-10 lg:leading-7 lg:w-3/5">
-            I am a product designer and a design enthusiast. I love creating seamless userexperiences and digital
+            I am a product designer and a design enthusiast. I love creating seamless user experiences and digital
             user interfaces. I am passionate about solving complex problems through data-driven processes that
             translate business objectives into solutions, putting empathy for the user as a key ingredient.
           </p>
@@ -356,7 +357,7 @@
 
           <p
             class="hero-details-text transform opacity-0 font-sf text-xs md:text-sm xl:text-lg 2xl:text-2xl text-left text-primary md:mb-5 lg:mb-10 lg:leading-7 xl:leading-8 2xl:leading-10 md:w-3/5 2xl:pr-5">
-            I am a product designer and a design enthusiast. I love creating seamless userexperiences and digital user
+            I am a product designer and a design enthusiast. I love creating seamless user experiences and digital user
             interfaces.I
             am passionate about solving complex problems through data- driven processes that translate business
             objectives into
@@ -730,7 +731,7 @@
 
           </div>
 
-          <div class="cryptly .stop lg:mb-0">
+          <div class="cryptly stop lg:mb-0">
             <p class="num inv font-caudex text-num text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">
               03
             </p>
@@ -1173,27 +1174,26 @@
     </section>
   </div>
 
-  <footer class="bg-footerlight dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24" id="footer">
+  <footer class="bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24" id="footer">
     <div class="container mx-auto px-4 sm:px-8">
       <div
         class="first-container before:bg-black after:bg-black  dark:before:bg-white dark:after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
         <div
           class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
-          <h1
-            class="got-an-idea inv font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl">
+          <h1 class="got-an-idea inv font-caudex text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl">
             Got an idea?
           </h1>
 
           <p>
             <a data-video-src="jumiar-video"
-              class="lets-talk font-sf text-black after:border-t after:border-b after:border dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
+              class="lets-talk font-sf after:border-t after:border-b after:border text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
               href="#">
               Let's talk about it.
             </a>
           </p>
         </div>
 
-        <div class="contacts font-sf md:w-2/4 text-black dark:text-white text-xs lg:text-sm xl:text-base 2xl:text-lg">
+        <div class="contacts font-sf md:w-2/4 text-white text-xs lg:text-sm xl:text-base 2xl:text-lg">
           <div class="grid grid-cols-4 gap-y-3 xl:gap-y-7 text-xs lg:text-base items-center overflow-y-hidden">
             <a data-aos="fade-up" class="instagram-footer-link" href="https://instagram.com/ozenua_uiux"
               target="blank">Instagram</a>
@@ -1209,6 +1209,13 @@
             </ul>
           </div>
         </div>
+      </div>
+
+      <div class="credits text-center mt-14 lg:mt-20 2xl:mt-24">
+        <p class="developer font-sf text-primary text-tiny lg:text-xs xl:text-sm 2xl:text-base">
+          Developed by <span><a class="text-white uppercase" href="https://www.linkedin.com/in/ganiyu-idris/"
+              target="blank">ganiyu idris</a></span>
+        </p>
       </div>
     </div>
   </footer>
@@ -1254,7 +1261,12 @@
   </script>
 
   <script type="module">
+    import $ from "jquery";
+    window.addEventListener('load', scrollToTop());
 
+    function scrollToTop() {
+      $('html, body').animate({ scrollTop: 0 }, 'fast')
+    }
   </script>
 </body>
 
